src/test/data/serverIntegration/diagnostics.cds
type T : Integer;

entity F {
    m : T;
    n : <error descr="No artifact has been found with name “NotFound”">NotFound</error>;
}

<error>ntity</error> B {}
